# airflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: consumer.py  dag.py  elastic_dag.py  forex_data_pipeline.py  get_file_on_google_drive.py  parallel.py  producer.py  send_email_task.py  update_pci_parcels.py  user_processing.py  xcom_dag.py
dags/docker_example/: Dockerfile  my_dag.py
dags/files/: departments_list.json
dags/scripts/: zonage.py
dags/scripts/config/: configparams.py
dags/scripts/parcels_update/: cube_load.py  stage_load.py
plugins/hooks/elastic/: elastic_hook.py
